--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
         </a>
         <menu class="body__nav__menu">
             <a href="index.html" class="body__nav__menu__item fa fa-home"></a>
-            <a href="aboutMe.html" class="body__nav__menu__item fas fa-user"></a>
+            <a href="src/aboutMe.html" class="body__nav__menu__item fas fa-user"></a>
             <a onclick="window.open(`https://github.com/p3945u5`)" class="body__nav__menu__item fab fa-github"></a>
-            <a href="contact.html" class="body__nav__menu__item fas fa-paper-plane"></a>
-            <a href="proyects.html" class="body__nav__menu__item fas fa-project-diagram"></a>
-            <a href="webDeveloping.html" class="body__nav__menu__item fa fa-html5"></a>
-            <a href="codeDeveloping.html" class="body__nav__menu__item fa fa-code"></a>
-            <a href="serverManagement.html" class="body__nav__menu__item fa fa-server"></a>
-            <a href="networkManagement.html" class="body__nav__menu__item fas fa-network-wired"></a>
-            <a href="systemsSecurity.html" class="body__nav__menu__item fa fa-shield-alt"></a>
-            <a href="certifications.html" class="body__nav__menu__item fa fa-certificate"></a>
-            <a href="moreInfo.html" class="body__nav__menu__item fa fa-info"></a>
+            <a href="src/contact.html" class="body__nav__menu__item fas fa-paper-plane"></a>
+            <a href="src/proyects.html" class="body__nav__menu__item fas fa-project-diagram"></a>
+            <a href="src/webDeveloping.html" class="body__nav__menu__item fa fa-html5"></a>
+            <a href="src/codeDeveloping.html" class="body__nav__menu__item fa fa-code"></a>
+            <a href="src/serverManagement.html" class="body__nav__menu__item fa fa-server"></a>
+            <a href="src/networkManagement.html" class="body__nav__menu__item fas fa-network-wired"></a>
+            <a href="src/systemsSecurity.html" class="body__nav__menu__item fa fa-shield-alt"></a>
+            <a href="src/certifications.html" class="body__nav__menu__item fa fa-certificate"></a>
+            <a href="src/moreInfo.html" class="body__nav__menu__item fa fa-info"></a>
         </menu>
     </nav>
     <section class="body__section">
@@ -151,10 +151,10 @@
               <a href="mailto:igarciafdz99@hotmail.com">Email</a>
             </td>
             <td>
-              <a href="ceo.html">CEO</a>
+              <a href="src/ceo.html">CEO</a>
             </td>
             <td>
-              <a href="history.html">History</a>
+              <a href="src/history.html">History</a>
             </td>
           </tr>
           <tr>
@@ -162,10 +162,10 @@
               <a href="tel:+34630543965">Phone</a>
             </td>
             <td>
-              <a href="directive.html">Directive</a>
+              <a href="src/directive.html">Directive</a>
             </td>
             <td>
-              <a href="target.html">Target</a>
+              <a href="src/target.html">Target</a>
             </td>
         </tr>
         <tr>
@@ -173,10 +173,10 @@
 
           </td>
           <td>
-            <a href="directive.html">Inversionist</a>
+            <a href="src/inversionist.html">Inversionist</a>
           </td>
           <td>
-            <a href="workWithUs.html">Work with Us</a>
+            <a href="src/workWithUs.html">Work with Us</a>
           </td>
       </tr>
         </table>
@@ -192,6 +192,6 @@
       </div>
   </footer>
 </body>
-<script src="main.js"></script>
+<script src="js/main.js"></script>
 <script src="https://kit.fontawesome.com/c465f19795.js" crossorigin="anonymous"></script>
 </html>
