--- a/src/ceo.html
+++ b/src/ceo.html
@@ -21,7 +21,7 @@
          Junior Developer & Network Administrator
       </h2>
       <h3 class="body__header__h3">
-          About Me
+          CEO
       </h3>
     </header>
     <nav class="body__nav" id="body_nav_01">
